@@ -2,6 +2,7 @@ Changes in 3.2.3:
 - Make sure View gets focus back when you are finished editing the name of a torrent
 - Fix bug causing sizes > 4GB not being displayed properly in plasma applet
 - Fix bug in sleep suppression feature causing it to not work when torrents get started at startup (195991)
+- Also announce to DHT node when we get back a GetPeers with nodes (194366)
 
 Changes in 3.2.2 :
 - Fix crash when changing speed limits using system tray menu (188447)
